syntax = "proto3";
package dymensionxyz.dymension.sponsorship;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "dymensionxyz/dymension/sponsorship/sponsorship.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/sponsorship/types";

message EventUpdateParams {
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  Params new_params = 2 [ (gogoproto.nullable) = false ];
  Params old_params = 3 [ (gogoproto.nullable) = false ];
}

message EventVote {
  string voter = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  Vote vote = 2 [ (gogoproto.nullable) = false ];
  Distribution distribution = 3 [ (gogoproto.nullable) = false ];
}

message EventRevokeVote {
  string voter = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  Distribution distribution = 2 [ (gogoproto.nullable) = false ];
}

message EventVotingPowerUpdate {
  string voter = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string validator = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  Distribution distribution = 3 [ (gogoproto.nullable) = false ];
  bool vote_pruned = 4;
  string new_voting_power = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string voting_power_diff = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
}
